# R-to-Python

./: README.md  tmpclaude-94a8-cwd
python-tutorial/: .gitignore  README.md  pyproject.toml  run_webapp.py
python-tutorial/answers/01_fundamentals/: ex01_indexing.py  ex05_reference_vs_copy.py  ex08_mutable_default.py
python-tutorial/answers/05_numpy/: ex03_boolean_indexing.py
python-tutorial/answers/06_pandas/: ex06_groupby.py
python-tutorial/answers/07_polars/: ex04_with_columns.py
python-tutorial/answers/08_stats/: ex01_linear_regression.py
python-tutorial/answers/09_plotly/: ex01_scatter.py
python-tutorial/exercises/01_fundamentals/: ex01_indexing.py
python-tutorial/exercises/02_control_flow/: ex01_for_loops.py  ex04_zip.py
python-tutorial/exercises/03_functions/: ex02_keyword_args.py  ex04_multiple_returns.py  ex05_args.py  ex08_lambda.py
python-tutorial/exercises/04_data_structures/: ex05_sets.py  ex08_nested_dicts.py
python-tutorial/exercises/05_numpy/: ex02_indexing.py  ex04_reshape.py  ex05_broadcasting_basics.py
python-tutorial/exercises/06_pandas/: ex04_loc_iloc.py  ex05_adding_columns.py  ex06_groupby.py  ex10_melt.py
python-tutorial/exercises/07_polars/: ex05_expressions.py  ex06_groupby.py
python-tutorial/exercises/08_stats/: ex02_model_results.py  (+4 more)
python-tutorial/tests/: __init__.py  conftest.py  test_01_fundamentals.py  test_02_control_flow.py  test_03_functions.py  test_04_data_structures.py  test_05_numpy.py  test_06_pandas.py  test_07_polars.py  test_08_stats.py  test_09_plotly.py
python-tutorial/web/: index.html  main.js
(+90 files in other folders)
