[project]
name = "python-tutorial"
version = "0.1.0"
description = "Interactive Python tutorial for R data scientists"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "polars>=0.20",
    "pyarrow>=14.0",
    "plotly>=5.15",
    "statsmodels>=0.14",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grader"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v"
